Attempted fixing the fonts once again and the framed logo top margin on the covers.

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -43,7 +43,7 @@ html {
 
 // Main site style
 h1, h2, h3, h4, h5, h6 {
-	margin-top: 0;
+	//margin-top: 0;
 	font-family: 'Galano Grotesque Alt', Arial, Helvetica, sans-serif;
 	line-height: 100%;
 }
@@ -52,7 +52,7 @@ body {
 	font-weight: normal;
 	min-height: 100%;
 	overflow-x: hidden;
-	margin: 0;
+	//margin: 0;
 	-webkit-font-smoothing: antialiased;
 	text-rendering: optimizeLegibility;
 	-moz-osx-font-smoothing: grayscale;
